parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> time program links
Rule 2     time -> TIME time_def step_def
Rule 3     time -> TIME step_def time_def
Rule 4     time -> empty
Rule 5     time_def -> HORIZON COLON INT
Rule 6     step_def -> STEP COLON INT
Rule 7     links -> LINKS link_def link_aux
Rule 8     links -> empty
Rule 9     link_def -> NAME EQUAL NAME more_id
Rule 10    link_def -> NAME DOT ID EQUAL NAME DOT ID more_id_aux
Rule 11    more_id_aux -> COMMA NAME DOT ID more_id_aux
Rule 12    more_id_aux -> empty
Rule 13    more_id -> COMMA NAME more_id
Rule 14    more_id -> empty
Rule 15    link_aux -> link_def link_aux
Rule 16    link_aux -> empty
Rule 17    program -> node program
Rule 18    program -> empty
Rule 19    node -> NODE NAME parameters variables constraints objectives
Rule 20    empty -> <empty>
Rule 21    parameters -> PARAM define_parameters
Rule 22    parameters -> empty
Rule 23    define_parameters -> parameter define_parameters
Rule 24    define_parameters -> empty
Rule 25    parameter -> ID unity EQUAL expr
Rule 26    parameter -> ID unity EQUAL LCBRAC term more_values RCBRAC
Rule 27    parameter -> ID unity EQUAL IMPORT FILENAME
Rule 28    more_values -> COMMA term more_values
Rule 29    more_values -> empty
Rule 30    variables -> VAR define_variables
Rule 31    define_variables -> INTERNAL COLON id unity var_aux
Rule 32    define_variables -> OUTPUT COLON id unity var_aux
Rule 33    define_variables -> INPUT COLON id unity var_aux
Rule 34    var_aux -> define_variables
Rule 35    var_aux -> empty
Rule 36    constraints -> CONS constraints_aux
Rule 37    constraints -> empty
Rule 38    constraints_aux -> define_constraints SEMICOLON constraints_aux
Rule 39    constraints_aux -> define_constraints
Rule 40    define_constraints -> expr EQUAL expr
Rule 41    define_constraints -> expr LEQ expr
Rule 42    define_constraints -> expr BEQ expr
Rule 43    objectives -> OBJ define_objectives
Rule 44    objectives -> empty
Rule 45    define_objectives -> MIN COLON expr obj_aux
Rule 46    define_objectives -> MAX COLON expr obj_aux
Rule 47    obj_aux -> define_objectives
Rule 48    obj_aux -> empty
Rule 49    id -> ID LBRAC expr RBRAC
Rule 50    id -> ID
Rule 51    expr -> expr PLUS expr
Rule 52    expr -> expr MINUS expr
Rule 53    expr -> expr MULT expr
Rule 54    expr -> expr DIVIDE expr
Rule 55    expr -> MINUS expr
Rule 56    expr -> expr POW expr
Rule 57    expr -> LPAR expr RPAR
Rule 58    expr -> term
Rule 59    term -> INT
Rule 60    term -> FLOAT
Rule 61    term -> id
Rule 62    unity -> IN expr
Rule 63    unity -> empty

Terminals, with rules where they appear

BEQ                  : 42
COLON                : 5 6 31 32 33 45 46
COMMA                : 11 13 28
CONS                 : 36
DIVIDE               : 54
DOT                  : 10 10 11
EQUAL                : 9 10 25 26 27 40
FILENAME             : 27
FLOAT                : 60
HORIZON              : 5
ID                   : 10 10 11 25 26 27 49 50
IMPORT               : 27
IN                   : 62
INPUT                : 33
INT                  : 5 6 59
INTERNAL             : 31
LBRAC                : 49
LCBRAC               : 26
LEQ                  : 41
LINKS                : 7
LPAR                 : 57
MAX                  : 46
MIN                  : 45
MINUS                : 52 55
MULT                 : 53
NAME                 : 9 9 10 10 11 13 19
NODE                 : 19
OBJ                  : 43
OUTPUT               : 32
PARAM                : 21
PLUS                 : 51
POW                  : 56
RBRAC                : 49
RCBRAC               : 26
RPAR                 : 57
SEMICOLON            : 38
STEP                 : 6
TIME                 : 2 3
VAR                  : 30
error                : 

Nonterminals, with rules where they appear

constraints          : 19
constraints_aux      : 36 38
define_constraints   : 38 39
define_objectives    : 43 47
define_parameters    : 21 23
define_variables     : 30 34
empty                : 4 8 12 14 16 18 22 24 29 35 37 44 48 63
expr                 : 25 40 40 41 41 42 42 45 46 49 51 51 52 52 53 53 54 54 55 56 56 57 62
id                   : 31 32 33 61
link_aux             : 7 15
link_def             : 7 15
links                : 1
more_id              : 9 13
more_id_aux          : 10 11
more_values          : 26 28
node                 : 17
obj_aux              : 45 46
objectives           : 19
parameter            : 23
parameters           : 19
program              : 1 17
start                : 0
step_def             : 2 3
term                 : 26 28 58
time                 : 1
time_def             : 2 3
unity                : 25 26 27 31 32 33
var_aux              : 31 32 33
variables            : 19

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . time program links
    (2) time -> . TIME time_def step_def
    (3) time -> . TIME step_def time_def
    (4) time -> . empty
    (20) empty -> .

    TIME            shift and go to state 3
    NODE            reduce using rule 20 (empty -> .)
    LINKS           reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)

    start                          shift and go to state 1
    time                           shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> time . program links
    (17) program -> . node program
    (18) program -> . empty
    (19) node -> . NODE NAME parameters variables constraints objectives
    (20) empty -> .

    NODE            shift and go to state 8
    LINKS           reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)

    program                        shift and go to state 5
    node                           shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) time -> TIME . time_def step_def
    (3) time -> TIME . step_def time_def
    (5) time_def -> . HORIZON COLON INT
    (6) step_def -> . STEP COLON INT

    HORIZON         shift and go to state 11
    STEP            shift and go to state 12

    time_def                       shift and go to state 9
    step_def                       shift and go to state 10

state 4

    (4) time -> empty .

    NODE            reduce using rule 4 (time -> empty .)
    LINKS           reduce using rule 4 (time -> empty .)
    $end            reduce using rule 4 (time -> empty .)


state 5

    (1) start -> time program . links
    (7) links -> . LINKS link_def link_aux
    (8) links -> . empty
    (20) empty -> .

    LINKS           shift and go to state 14
    $end            reduce using rule 20 (empty -> .)

    links                          shift and go to state 13
    empty                          shift and go to state 15

state 6

    (17) program -> node . program
    (17) program -> . node program
    (18) program -> . empty
    (19) node -> . NODE NAME parameters variables constraints objectives
    (20) empty -> .

    NODE            shift and go to state 8
    LINKS           reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)

    node                           shift and go to state 6
    program                        shift and go to state 16
    empty                          shift and go to state 7

state 7

    (18) program -> empty .

    LINKS           reduce using rule 18 (program -> empty .)
    $end            reduce using rule 18 (program -> empty .)


state 8

    (19) node -> NODE . NAME parameters variables constraints objectives

    NAME            shift and go to state 17


state 9

    (2) time -> TIME time_def . step_def
    (6) step_def -> . STEP COLON INT

    STEP            shift and go to state 12

    step_def                       shift and go to state 18

state 10

    (3) time -> TIME step_def . time_def
    (5) time_def -> . HORIZON COLON INT

    HORIZON         shift and go to state 11

    time_def                       shift and go to state 19

state 11

    (5) time_def -> HORIZON . COLON INT

    COLON           shift and go to state 20


state 12

    (6) step_def -> STEP . COLON INT

    COLON           shift and go to state 21


state 13

    (1) start -> time program links .

    $end            reduce using rule 1 (start -> time program links .)


state 14

    (7) links -> LINKS . link_def link_aux
    (9) link_def -> . NAME EQUAL NAME more_id
    (10) link_def -> . NAME DOT ID EQUAL NAME DOT ID more_id_aux

    NAME            shift and go to state 23

    link_def                       shift and go to state 22

state 15

    (8) links -> empty .

    $end            reduce using rule 8 (links -> empty .)


state 16

    (17) program -> node program .

    LINKS           reduce using rule 17 (program -> node program .)
    $end            reduce using rule 17 (program -> node program .)


state 17

    (19) node -> NODE NAME . parameters variables constraints objectives
    (21) parameters -> . PARAM define_parameters
    (22) parameters -> . empty
    (20) empty -> .

    PARAM           shift and go to state 25
    VAR             reduce using rule 20 (empty -> .)

    parameters                     shift and go to state 24
    empty                          shift and go to state 26

state 18

    (2) time -> TIME time_def step_def .

    NODE            reduce using rule 2 (time -> TIME time_def step_def .)
    LINKS           reduce using rule 2 (time -> TIME time_def step_def .)
    $end            reduce using rule 2 (time -> TIME time_def step_def .)


state 19

    (3) time -> TIME step_def time_def .

    NODE            reduce using rule 3 (time -> TIME step_def time_def .)
    LINKS           reduce using rule 3 (time -> TIME step_def time_def .)
    $end            reduce using rule 3 (time -> TIME step_def time_def .)


state 20

    (5) time_def -> HORIZON COLON . INT

    INT             shift and go to state 27


state 21

    (6) step_def -> STEP COLON . INT

    INT             shift and go to state 28


state 22

    (7) links -> LINKS link_def . link_aux
    (15) link_aux -> . link_def link_aux
    (16) link_aux -> . empty
    (9) link_def -> . NAME EQUAL NAME more_id
    (10) link_def -> . NAME DOT ID EQUAL NAME DOT ID more_id_aux
    (20) empty -> .

    NAME            shift and go to state 23
    $end            reduce using rule 20 (empty -> .)

    link_def                       shift and go to state 29
    link_aux                       shift and go to state 30
    empty                          shift and go to state 31

state 23

    (9) link_def -> NAME . EQUAL NAME more_id
    (10) link_def -> NAME . DOT ID EQUAL NAME DOT ID more_id_aux

    EQUAL           shift and go to state 32
    DOT             shift and go to state 33


state 24

    (19) node -> NODE NAME parameters . variables constraints objectives
    (30) variables -> . VAR define_variables

    VAR             shift and go to state 35

    variables                      shift and go to state 34

state 25

    (21) parameters -> PARAM . define_parameters
    (23) define_parameters -> . parameter define_parameters
    (24) define_parameters -> . empty
    (25) parameter -> . ID unity EQUAL expr
    (26) parameter -> . ID unity EQUAL LCBRAC term more_values RCBRAC
    (27) parameter -> . ID unity EQUAL IMPORT FILENAME
    (20) empty -> .

    ID              shift and go to state 39
    VAR             reduce using rule 20 (empty -> .)

    define_parameters              shift and go to state 36
    parameter                      shift and go to state 37
    empty                          shift and go to state 38

state 26

    (22) parameters -> empty .

    VAR             reduce using rule 22 (parameters -> empty .)


state 27

    (5) time_def -> HORIZON COLON INT .

    STEP            reduce using rule 5 (time_def -> HORIZON COLON INT .)
    NODE            reduce using rule 5 (time_def -> HORIZON COLON INT .)
    LINKS           reduce using rule 5 (time_def -> HORIZON COLON INT .)
    $end            reduce using rule 5 (time_def -> HORIZON COLON INT .)


state 28

    (6) step_def -> STEP COLON INT .

    HORIZON         reduce using rule 6 (step_def -> STEP COLON INT .)
    NODE            reduce using rule 6 (step_def -> STEP COLON INT .)
    LINKS           reduce using rule 6 (step_def -> STEP COLON INT .)
    $end            reduce using rule 6 (step_def -> STEP COLON INT .)


state 29

    (15) link_aux -> link_def . link_aux
    (15) link_aux -> . link_def link_aux
    (16) link_aux -> . empty
    (9) link_def -> . NAME EQUAL NAME more_id
    (10) link_def -> . NAME DOT ID EQUAL NAME DOT ID more_id_aux
    (20) empty -> .

    NAME            shift and go to state 23
    $end            reduce using rule 20 (empty -> .)

    link_def                       shift and go to state 29
    link_aux                       shift and go to state 40
    empty                          shift and go to state 31

state 30

    (7) links -> LINKS link_def link_aux .

    $end            reduce using rule 7 (links -> LINKS link_def link_aux .)


state 31

    (16) link_aux -> empty .

    $end            reduce using rule 16 (link_aux -> empty .)


state 32

    (9) link_def -> NAME EQUAL . NAME more_id

    NAME            shift and go to state 41


state 33

    (10) link_def -> NAME DOT . ID EQUAL NAME DOT ID more_id_aux

    ID              shift and go to state 42


state 34

    (19) node -> NODE NAME parameters variables . constraints objectives
    (36) constraints -> . CONS constraints_aux
    (37) constraints -> . empty
    (20) empty -> .

    CONS            shift and go to state 44
    OBJ             reduce using rule 20 (empty -> .)
    NODE            reduce using rule 20 (empty -> .)
    LINKS           reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)

    constraints                    shift and go to state 43
    empty                          shift and go to state 45

state 35

    (30) variables -> VAR . define_variables
    (31) define_variables -> . INTERNAL COLON id unity var_aux
    (32) define_variables -> . OUTPUT COLON id unity var_aux
    (33) define_variables -> . INPUT COLON id unity var_aux

    INTERNAL        shift and go to state 47
    OUTPUT          shift and go to state 48
    INPUT           shift and go to state 49

    define_variables               shift and go to state 46

state 36

    (21) parameters -> PARAM define_parameters .

    VAR             reduce using rule 21 (parameters -> PARAM define_parameters .)


state 37

    (23) define_parameters -> parameter . define_parameters
    (23) define_parameters -> . parameter define_parameters
    (24) define_parameters -> . empty
    (25) parameter -> . ID unity EQUAL expr
    (26) parameter -> . ID unity EQUAL LCBRAC term more_values RCBRAC
    (27) parameter -> . ID unity EQUAL IMPORT FILENAME
    (20) empty -> .

    ID              shift and go to state 39
    VAR             reduce using rule 20 (empty -> .)

    parameter                      shift and go to state 37
    define_parameters              shift and go to state 50
    empty                          shift and go to state 38

state 38

    (24) define_parameters -> empty .

    VAR             reduce using rule 24 (define_parameters -> empty .)


state 39

    (25) parameter -> ID . unity EQUAL expr
    (26) parameter -> ID . unity EQUAL LCBRAC term more_values RCBRAC
    (27) parameter -> ID . unity EQUAL IMPORT FILENAME
    (62) unity -> . IN expr
    (63) unity -> . empty
    (20) empty -> .

    IN              shift and go to state 52
    EQUAL           reduce using rule 20 (empty -> .)

    unity                          shift and go to state 51
    empty                          shift and go to state 53

state 40

    (15) link_aux -> link_def link_aux .

    $end            reduce using rule 15 (link_aux -> link_def link_aux .)


state 41

    (9) link_def -> NAME EQUAL NAME . more_id
    (13) more_id -> . COMMA NAME more_id
    (14) more_id -> . empty
    (20) empty -> .

    COMMA           shift and go to state 55
    NAME            reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)

    more_id                        shift and go to state 54
    empty                          shift and go to state 56

state 42

    (10) link_def -> NAME DOT ID . EQUAL NAME DOT ID more_id_aux

    EQUAL           shift and go to state 57


state 43

    (19) node -> NODE NAME parameters variables constraints . objectives
    (43) objectives -> . OBJ define_objectives
    (44) objectives -> . empty
    (20) empty -> .

    OBJ             shift and go to state 59
    NODE            reduce using rule 20 (empty -> .)
    LINKS           reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)

    objectives                     shift and go to state 58
    empty                          shift and go to state 60

state 44

    (36) constraints -> CONS . constraints_aux
    (38) constraints_aux -> . define_constraints SEMICOLON constraints_aux
    (39) constraints_aux -> . define_constraints
    (40) define_constraints -> . expr EQUAL expr
    (41) define_constraints -> . expr LEQ expr
    (42) define_constraints -> . expr BEQ expr
    (51) expr -> . expr PLUS expr
    (52) expr -> . expr MINUS expr
    (53) expr -> . expr MULT expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . MINUS expr
    (56) expr -> . expr POW expr
    (57) expr -> . LPAR expr RPAR
    (58) expr -> . term
    (59) term -> . INT
    (60) term -> . FLOAT
    (61) term -> . id
    (49) id -> . ID LBRAC expr RBRAC
    (50) id -> . ID

    MINUS           shift and go to state 64
    LPAR            shift and go to state 65
    INT             shift and go to state 67
    FLOAT           shift and go to state 68
    ID              shift and go to state 70

    constraints_aux                shift and go to state 61
    define_constraints             shift and go to state 62
    expr                           shift and go to state 63
    term                           shift and go to state 66
    id                             shift and go to state 69

state 45

    (37) constraints -> empty .

    OBJ             reduce using rule 37 (constraints -> empty .)
    NODE            reduce using rule 37 (constraints -> empty .)
    LINKS           reduce using rule 37 (constraints -> empty .)
    $end            reduce using rule 37 (constraints -> empty .)


state 46

    (30) variables -> VAR define_variables .

    CONS            reduce using rule 30 (variables -> VAR define_variables .)
    OBJ             reduce using rule 30 (variables -> VAR define_variables .)
    NODE            reduce using rule 30 (variables -> VAR define_variables .)
    LINKS           reduce using rule 30 (variables -> VAR define_variables .)
    $end            reduce using rule 30 (variables -> VAR define_variables .)


state 47

    (31) define_variables -> INTERNAL . COLON id unity var_aux

    COLON           shift and go to state 71


state 48

    (32) define_variables -> OUTPUT . COLON id unity var_aux

    COLON           shift and go to state 72


state 49

    (33) define_variables -> INPUT . COLON id unity var_aux

    COLON           shift and go to state 73


state 50

    (23) define_parameters -> parameter define_parameters .

    VAR             reduce using rule 23 (define_parameters -> parameter define_parameters .)


state 51

    (25) parameter -> ID unity . EQUAL expr
    (26) parameter -> ID unity . EQUAL LCBRAC term more_values RCBRAC
    (27) parameter -> ID unity . EQUAL IMPORT FILENAME

    EQUAL           shift and go to state 74


state 52

    (62) unity -> IN . expr
    (51) expr -> . expr PLUS expr
    (52) expr -> . expr MINUS expr
    (53) expr -> . expr MULT expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . MINUS expr
    (56) expr -> . expr POW expr
    (57) expr -> . LPAR expr RPAR
    (58) expr -> . term
    (59) term -> . INT
    (60) term -> . FLOAT
    (61) term -> . id
    (49) id -> . ID LBRAC expr RBRAC
    (50) id -> . ID

    MINUS           shift and go to state 64
    LPAR            shift and go to state 65
    INT             shift and go to state 67
    FLOAT           shift and go to state 68
    ID              shift and go to state 70

    expr                           shift and go to state 75
    term                           shift and go to state 66
    id                             shift and go to state 69

state 53

    (63) unity -> empty .

    EQUAL           reduce using rule 63 (unity -> empty .)
    INTERNAL        reduce using rule 63 (unity -> empty .)
    OUTPUT          reduce using rule 63 (unity -> empty .)
    INPUT           reduce using rule 63 (unity -> empty .)
    CONS            reduce using rule 63 (unity -> empty .)
    OBJ             reduce using rule 63 (unity -> empty .)
    NODE            reduce using rule 63 (unity -> empty .)
    LINKS           reduce using rule 63 (unity -> empty .)
    $end            reduce using rule 63 (unity -> empty .)


state 54

    (9) link_def -> NAME EQUAL NAME more_id .

    NAME            reduce using rule 9 (link_def -> NAME EQUAL NAME more_id .)
    $end            reduce using rule 9 (link_def -> NAME EQUAL NAME more_id .)


state 55

    (13) more_id -> COMMA . NAME more_id

    NAME            shift and go to state 76


state 56

    (14) more_id -> empty .

    NAME            reduce using rule 14 (more_id -> empty .)
    $end            reduce using rule 14 (more_id -> empty .)


state 57

    (10) link_def -> NAME DOT ID EQUAL . NAME DOT ID more_id_aux

    NAME            shift and go to state 77


state 58

    (19) node -> NODE NAME parameters variables constraints objectives .

    NODE            reduce using rule 19 (node -> NODE NAME parameters variables constraints objectives .)
    LINKS           reduce using rule 19 (node -> NODE NAME parameters variables constraints objectives .)
    $end            reduce using rule 19 (node -> NODE NAME parameters variables constraints objectives .)


state 59

    (43) objectives -> OBJ . define_objectives
    (45) define_objectives -> . MIN COLON expr obj_aux
    (46) define_objectives -> . MAX COLON expr obj_aux

    MIN             shift and go to state 79
    MAX             shift and go to state 80

    define_objectives              shift and go to state 78

state 60

    (44) objectives -> empty .

    NODE            reduce using rule 44 (objectives -> empty .)
    LINKS           reduce using rule 44 (objectives -> empty .)
    $end            reduce using rule 44 (objectives -> empty .)


state 61

    (36) constraints -> CONS constraints_aux .

    OBJ             reduce using rule 36 (constraints -> CONS constraints_aux .)
    NODE            reduce using rule 36 (constraints -> CONS constraints_aux .)
    LINKS           reduce using rule 36 (constraints -> CONS constraints_aux .)
    $end            reduce using rule 36 (constraints -> CONS constraints_aux .)


state 62

    (38) constraints_aux -> define_constraints . SEMICOLON constraints_aux
    (39) constraints_aux -> define_constraints .

    SEMICOLON       shift and go to state 81
    OBJ             reduce using rule 39 (constraints_aux -> define_constraints .)
    NODE            reduce using rule 39 (constraints_aux -> define_constraints .)
    LINKS           reduce using rule 39 (constraints_aux -> define_constraints .)
    $end            reduce using rule 39 (constraints_aux -> define_constraints .)


state 63

    (40) define_constraints -> expr . EQUAL expr
    (41) define_constraints -> expr . LEQ expr
    (42) define_constraints -> expr . BEQ expr
    (51) expr -> expr . PLUS expr
    (52) expr -> expr . MINUS expr
    (53) expr -> expr . MULT expr
    (54) expr -> expr . DIVIDE expr
    (56) expr -> expr . POW expr

    EQUAL           shift and go to state 82
    LEQ             shift and go to state 83
    BEQ             shift and go to state 84
    PLUS            shift and go to state 85
    MINUS           shift and go to state 86
    MULT            shift and go to state 87
    DIVIDE          shift and go to state 88
    POW             shift and go to state 89


state 64

    (55) expr -> MINUS . expr
    (51) expr -> . expr PLUS expr
    (52) expr -> . expr MINUS expr
    (53) expr -> . expr MULT expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . MINUS expr
    (56) expr -> . expr POW expr
    (57) expr -> . LPAR expr RPAR
    (58) expr -> . term
    (59) term -> . INT
    (60) term -> . FLOAT
    (61) term -> . id
    (49) id -> . ID LBRAC expr RBRAC
    (50) id -> . ID

    MINUS           shift and go to state 64
    LPAR            shift and go to state 65
    INT             shift and go to state 67
    FLOAT           shift and go to state 68
    ID              shift and go to state 70

    expr                           shift and go to state 90
    term                           shift and go to state 66
    id                             shift and go to state 69

state 65

    (57) expr -> LPAR . expr RPAR
    (51) expr -> . expr PLUS expr
    (52) expr -> . expr MINUS expr
    (53) expr -> . expr MULT expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . MINUS expr
    (56) expr -> . expr POW expr
    (57) expr -> . LPAR expr RPAR
    (58) expr -> . term
    (59) term -> . INT
    (60) term -> . FLOAT
    (61) term -> . id
    (49) id -> . ID LBRAC expr RBRAC
    (50) id -> . ID

    MINUS           shift and go to state 64
    LPAR            shift and go to state 65
    INT             shift and go to state 67
    FLOAT           shift and go to state 68
    ID              shift and go to state 70

    expr                           shift and go to state 91
    term                           shift and go to state 66
    id                             shift and go to state 69

state 66

    (58) expr -> term .

    EQUAL           reduce using rule 58 (expr -> term .)
    LEQ             reduce using rule 58 (expr -> term .)
    BEQ             reduce using rule 58 (expr -> term .)
    PLUS            reduce using rule 58 (expr -> term .)
    MINUS           reduce using rule 58 (expr -> term .)
    MULT            reduce using rule 58 (expr -> term .)
    DIVIDE          reduce using rule 58 (expr -> term .)
    POW             reduce using rule 58 (expr -> term .)
    INTERNAL        reduce using rule 58 (expr -> term .)
    OUTPUT          reduce using rule 58 (expr -> term .)
    INPUT           reduce using rule 58 (expr -> term .)
    CONS            reduce using rule 58 (expr -> term .)
    OBJ             reduce using rule 58 (expr -> term .)
    NODE            reduce using rule 58 (expr -> term .)
    LINKS           reduce using rule 58 (expr -> term .)
    $end            reduce using rule 58 (expr -> term .)
    RPAR            reduce using rule 58 (expr -> term .)
    ID              reduce using rule 58 (expr -> term .)
    VAR             reduce using rule 58 (expr -> term .)
    SEMICOLON       reduce using rule 58 (expr -> term .)
    RBRAC           reduce using rule 58 (expr -> term .)
    MIN             reduce using rule 58 (expr -> term .)
    MAX             reduce using rule 58 (expr -> term .)


state 67

    (59) term -> INT .

    EQUAL           reduce using rule 59 (term -> INT .)
    LEQ             reduce using rule 59 (term -> INT .)
